--- a/sudoku/pom.xml
+++ b/sudoku/pom.xml
@@ -32,6 +32,16 @@
                 <groupId>org.pitest</groupId>
                 <artifactId>pitest-maven</artifactId>
                 <version>1.1.8</version>
+                <configuration>
+                    <targetClasses>
+                        <param>cs.helsinki.sudoku.app.*</param>
+                        <param>cs.helsinki.sudoku.util.*</param>
+                    </targetClasses>
+                    <targetTests>
+                        <param>cs.helsinki.sudoku.app.*</param>
+                        <param>cs.helsinki.sudoku.util.*</param>
+                    </targetTests>
+                </configuration>
             </plugin>
             <plugin>
                 <groupId>org.apache.maven.plugins</groupId>
